Introdução do gameover e finalização do projeto

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     
     <h3 class="texto1">Diga o seu chute para ele aparecer na tela!</h3>
 
+    <h3 class="game-over-titulo">Diga Game Over caso queira parar de jogar</h3>
+
     <div id="chute" class="mensagem">
         <!-- <div>Você disse:</div>
         <span class="box">20</span>
